<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/detail"
    android:textColor="@color/black"
    android:textSize="22dp"
    android:textStyle="bold"
    android:layout_centerHorizontal="true"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cnicnum"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountnet"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/amounttext"
        android:textColor="@color/black"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des"
        android:textStyle="bold"
        android:id="@+id/destext"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datelast"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/datetext"
        android:textColor="@color/black"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:id="@+id/personname"
        android:textSize="18dp"
        android:layout_marginTop="83dp"
        android:text="name"
        android:textColor="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:id="@+id/personcnic"
        android:layout_marginTop="180dp"
        android:textSize="18dp"
        android:text="name"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:id="@+id/personamount"
        android:layout_marginTop="280dp"
        android:textSize="18dp"
        android:text="name"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:id="@+id/persondetail"
        android:layout_marginTop="330dp"
        android:textSize="18dp"
        android:text="name"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:id="@+id/persondate"
        android:layout_marginTop="380dp"
        android:textSize="18dp"
        android:text="name"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:id="@+id/personnumber"
        android:layout_marginTop="130dp"
        android:text="number"
        android:textSize="18dp"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="230dp"
        android:id="@+id/personstatus"
        android:text="number"
        android:textSize="18dp"
        android:textColor="@color/grey"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/create"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@color/skyBlue"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/create2"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        app:backgroundTint="@color/skyBlue"
        />

</RelativeLayout>
